<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mydatabaseapp.login.LoginFragment">

    <data>
        <variable
            name="myLoginViewModel"
            type="com.example.mydatabaseapp.login.LoginViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/login_image"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/cutshape">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="80dp"
                android:text="@string/sign_in"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="80dp"
                android:text="@string/UserNameTextView"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:text="@string/PasswordText"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/userNameTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:hint="@string/UsernameTextField"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={myLoginViewModel.inputUsername}"
                android:textSize="18sp"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
                android:background="@drawable/fortext"/>

            <EditText
                android:id="@+id/passwordTextField"
                android:paddingVertical="6dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:hint="@string/PasswordTextFiels"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={myLoginViewModel.inputPassword}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/fortext"
                android:paddingLeft="10dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:background="@drawable/forsign"
                android:onClick="@{()->myLoginViewModel.loginButton()}"
                android:text="@string/sign_in_button"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/newUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginBottom="9dp"
                android:text="@string/i_m_a_new_user"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="7dp"
                android:onClick="@{()->myLoginViewModel.signUP()}"
                android:text="@string/signupText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>