<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mydatabaseapp.register.RegisterFragment">

    <data>
        <variable
            name="myViewModel"
            type="com.example.mydatabaseapp.register.RegisterViewModel" />
    </data>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/login_image"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:background="@drawable/cutshape">
            <EditText
                android:id="@+id/secondNameTextField"
                style="@style/PlainTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:autofillHints=""
                android:textSize="18sp"
                android:paddingVertical="6dp"
                android:text="@={myViewModel.inputLastName}"
                android:hint="@string/SecondNameTextField"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondNameText"
                android:background="@drawable/fortext"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="80dp"
                android:text="@string/FirstNameText"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/first_name_text_field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/first_name_text_field"
                style="@style/PlainTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:text="@={myViewModel.inputFirstName}"
                android:hint="@string/FirstNameTextField"
                android:importantForAutofill="no"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameText"
                android:background="@drawable/fortext"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/secondNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:gravity="center_horizontal"
                android:text="@string/LastNameText"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_text_field"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:text="@string/UserNameTextView"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondNameTextField" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:text="@string/PasswordText"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

            <EditText
                android:id="@+id/userNameTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:ems="10"
                android:hint="@string/UsernameTextField"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputUsername}"
                android:textSize="18sp"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
                android:background="@drawable/fortext"
                android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/passwordTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="80dp"
                android:textSize="18sp"
                android:paddingVertical="6dp"
                android:hint="@string/PasswordTextFiels"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
                android:background="@drawable/fortext"
                android:paddingLeft="10dp"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/forsign"
                android:onClick="@{()->myViewModel.sumbitButton()}"
                android:text="@string/submitButton"
                android:textColor="@color/cardview_light_background"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>